fix: branch list align

--- a/app/components/pipeline-search-panel/styles.scss
+++ b/app/components/pipeline-search-panel/styles.scss
@@ -11,7 +11,7 @@
 
   .branch {
     width: 25%;
-    text-align: right;
+    text-align: left;
   }
 
   .search-pipeline-searchbar {
